--- a/devel/py-websockets/Makefile
+++ b/devel/py-websockets/Makefile
@@ -1,17 +1,17 @@
-# Created by: Emanuel Haupt <ehaupt@FreeBSD.org>
-
 PORTNAME=	websockets
-PORTVERSION=	8.1
+PORTVERSION=	12.0
 CATEGORIES=	devel python
 MASTER_SITES=	PYPI
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Implementation of the WebSocket Protocol (RFC 6455 and 7692)
+WWW=		https://pypi.org/project/websockets/
 
 LICENSE=	bsd3
 
-USES=		python
+USES=		cpe python
+CPE_VENDOR=	${PORTNAME}_project
 USE_PYTHON=	autoplist distutils
 
 post-install:
