--- a/graphics/proj/Makefile
+++ b/graphics/proj/Makefile
@@ -1,6 +1,6 @@
 PORTNAME=	proj
-PORTVERSION=	9.2.1
-PORTREVISION=	1
+PORTVERSION=	9.4.1
+PORTEPOCH=	1
 CATEGORIES=	graphics geography
 MASTER_SITES=	https://download.osgeo.org/proj/
 
