--- a/math/py-numpy/Makefile
+++ b/math/py-numpy/Makefile
@@ -19,11 +19,10 @@ WWW=		https://www.numpy.org/
 LICENSE=	bsd3
 LICENSE_FILE=	${WRKSRC}/LICENSE.txt
 
-TEST_DEPENDS=	${PYTHON_PKGNAMEPREFIX}pytest>=6.2.5:devel/py-pytest@${PY_FLAVOR} \
-		${PYTHON_PKGNAMEPREFIX}hypothesis>=6.24.1:devel/py-hypothesis@${PY_FLAVOR} \
-		${PYTHON_PKGNAMEPREFIX}typing-extensions>=4.2.0:devel/py-typing-extensions@${PY_FLAVOR}
 USES=		compiler:c11 cpe fortran python:3.9-3.11
 USE_PYTHON=	allflavors autoplist concurrent cython distutils
+# circular depends for test
+NO_TEST=	yes
 
 GCCLIBDIR_CMDS=	${FC} -print-file-name=libgfortran.so | ${SED} -e s/libgfortran.so//
 LDFLAGS+=	-s
