--- a/devel/p5-Exporter-Tiny/Makefile
+++ b/devel/p5-Exporter-Tiny/Makefile
@@ -1,24 +1,23 @@
-# Created by: Sunpoet Po-Chuan Hsieh <sunpoet@FreeBSD.org>
-
-
 PORTNAME=	Exporter-Tiny
-PORTVERSION=	1.002001
+PORTVERSION=	1.006002
 CATEGORIES=	devel perl5
 MASTER_SITES=	CPAN
 PKGNAMEPREFIX=	p5-
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Exporter with features of Sub::Exporter but only core dependencies
+WWW=		https://metacpan.org/release/Exporter-Tiny
 
-LICENSE=	artistic gpl
+LICENSE=	artistic gpl+
 LICENSE_COMB=	dual
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
 TEST_DEPENDS=	p5-Test-Fatal>=0:devel/p5-Test-Fatal \
 		p5-Test-Warnings>=0:devel/p5-Test-Warnings
 
-NO_ARCH=	yes
-USE_PERL5=	configure
 USES=		perl5
+USE_PERL5=	configure
+
+NO_ARCH=	yes
 
 .include <bsd.port.mk>
