--- a/graphics/p5-Convert-Color-XTerm/Makefile
+++ b/graphics/p5-Convert-Color-XTerm/Makefile
@@ -1,21 +1,23 @@
 PORTNAME=	Convert-Color-XTerm
-PORTVERSION=	0.05
+PORTVERSION=	0.06
 CATEGORIES=	graphics perl5
 MASTER_SITES=	CPAN
 PKGNAMEPREFIX=	p5-
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Indexed colors used by XTerm
+WWW=		https://metacpan.org/release/Convert-Color-XTerm
 
-LICENSE=	artistic gpl
+LICENSE=	artistic gpl+
 LICENSE_COMB=	dual
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
 BUILD_DEPENDS=	${RUN_DEPENDS}
 RUN_DEPENDS=	p5-Convert-Color>=0.06:graphics/p5-Convert-Color
 
-NO_ARCH=	yes
-USE_PERL5=	configure
 USES=		perl5
+USE_PERL5=	modbuild
+
+NO_ARCH=	yes
 
 .include <bsd.port.mk>
