--- a/devel/p5-ExtUtils-Helpers/Makefile
+++ b/devel/p5-ExtUtils-Helpers/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=	ExtUtils-Helpers
-PORTVERSION=	0.027
+PORTVERSION=	0.028
 CATEGORIES=	devel perl5
 MASTER_SITES=	CPAN
 PKGNAMEPREFIX=	p5-
@@ -8,7 +8,7 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Various portability utilities for module builders
 WWW=		https://metacpan.org/release/ExtUtils-Helpers
 
-LICENSE=	artistic gpl
+LICENSE=	artistic gpl+
 LICENSE_COMB=	dual
 
 USE_PERL5=	configure
