--- a/devel/p5-ExtUtils-InstallPaths/Makefile
+++ b/devel/p5-ExtUtils-InstallPaths/Makefile
@@ -1,17 +1,18 @@
 PORTNAME=	ExtUtils-InstallPaths
-PORTVERSION=	0.013
+PORTVERSION=	0.014
 CATEGORIES=	devel perl5
 MASTER_SITES=	CPAN
 PKGNAMEPREFIX=	p5-
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Build.PL install path logic made easy
+WWW=		https://metacpan.org/release/ExtUtils-InstallPaths
 
-LICENSE=	artistic gpl
+LICENSE=	artistic gpl+
 LICENSE_COMB=	dual
 
 BUILD_DEPENDS=	${RUN_DEPENDS}
-RUN_DEPENDS=	p5-ExtUtils-Config>=0.002:devel/p5-ExtUtils-Config
+RUN_DEPENDS=	p5-ExtUtils-Config>=0.009:devel/p5-ExtUtils-Config
 
 NO_ARCH=	yes
 USE_PERL5=	configure
