--- a/devel/p5-File-Remove/Makefile
+++ b/devel/p5-File-Remove/Makefile
@@ -1,7 +1,5 @@
-
-
 PORTNAME=	File-Remove
-PORTVERSION=	1.57
+PORTVERSION=	1.60
 CATEGORIES=	devel perl5
 MASTER_SITES=	CPAN
 MASTER_SITE_SUBDIR=	CPAN:ADAMK
@@ -9,8 +7,9 @@ PKGNAMEPREFIX=	p5-
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Perl5 module to easily removes files and directories
+WWW=		https://metacpan.org/release/File-Remove
 
-LICENSE=	artistic gpl
+LICENSE=	artistic gpl+
 LICENSE_COMB=	dual
 
 USES=		perl5
