--- a/devel/p5-File-Slurper/Makefile
+++ b/devel/p5-File-Slurper/Makefile
@@ -1,19 +1,16 @@
-# Created by: Adam Weinberger <adamw@FreeBSD.org>
-
 PORTNAME=	File-Slurper
-PORTVERSION=	0.012
+PORTVERSION=	0.014
 CATEGORIES=	devel perl5
 MASTER_SITES=	CPAN
 PKGNAMEPREFIX=	p5-
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Simple, sane and efficient module to slurp a file
+WWW=		https://metacpan.org/dist/File-Slurper
 
-LICENSE=	artistic gpl
+LICENSE=	artistic gpl+
 LICENSE_COMB=	dual
 LICENSE_FILE=	${WRKSRC}/LICENSE
-
-TEST_DEPENDS=	p5-Test-Warnings>=0:devel/p5-Test-Warnings
 
 NO_ARCH=	yes
 USES=		perl5
