--- a/graphics/p5-Image-Info/Makefile
+++ b/graphics/p5-Image-Info/Makefile
@@ -1,22 +1,23 @@
 PORTNAME=	Image-Info
-PORTVERSION=	1.41
+PORTVERSION=	1.44
 CATEGORIES=	graphics perl5
 MASTER_SITES=	CPAN
 PKGNAMEPREFIX=	p5-
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Perl module for getting image information
+WWW=		https://metacpan.org/release/Image-Info
 
-LICENSE=	artistic gpl
+LICENSE=	artistic gpl+
 LICENSE_COMB=	dual
 
 BUILD_DEPENDS=	${RUN_DEPENDS}
-RUN_DEPENDS=	p5-IO-String>=0:devel/p5-IO-String \
-		p5-XML-LibXML>=0:textproc/p5-XML-LibXML \
+RUN_DEPENDS=	p5-XML-LibXML>=0:textproc/p5-XML-LibXML \
 		p5-XML-Simple>=0:textproc/p5-XML-Simple
 
 USES=		perl5
 USE_PERL5=	configure
+
 NO_ARCH=	yes
 
 .include <bsd.port.mk>
