--- a/graphics/p5-Image-Size/Makefile
+++ b/graphics/p5-Image-Size/Makefile
@@ -1,25 +1,18 @@
-
-
 PORTNAME=	Image-Size
-PORTVERSION=	3.221
-PORTREVISION=	1
+PORTVERSION=	3.300
 CATEGORIES=	graphics www perl5
 MASTER_SITES=	CPAN
 PKGNAMEPREFIX=	p5-
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Perl5 module to determine the size of images in several common formats
+WWW=		https://metacpan.org/release/Image-Size
 
-LICENSE=	artistic gpl
+LICENSE=	artistic2 lgpl2.1
 LICENSE_COMB=	dual
 
 USES=		perl5
 USE_PERL5=	configure
-.include <bsd.port.pre.mk>
+NO_ARCH=	yes
 
-.if ${PERL_LEVEL} < 500903
-RUN_DEPENDS+=	p5-IO-Compress>=2.017:${PORTSDIR}/archivers/p5-IO-Compress
-BUILD_DEPENDS+=	p5-IO-Compress>=2.017:${PORTSDIR}/archivers/p5-IO-Compress
-.endif
-
-.include <bsd.port.post.mk>
+.include <bsd.port.mk>
