--- a/security/p5-IO-Socket-SSL/Makefile
+++ b/security/p5-IO-Socket-SSL/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=	IO-Socket-SSL
-PORTVERSION=	2.088
+PORTVERSION=	2.089
 CATEGORIES=	security perl5
 MASTER_SITES=	CPAN
 PKGNAMEPREFIX=	p5-
@@ -25,7 +25,6 @@ CONFIGURE_ENV=	NO_NETWORK_TESTING=yes
 NO_TEST=	yes
 
 OPTIONS_DEFINE=	EXAMPLES IDN IPV6
-IPV6_RUN_DEPENDS=	p5-IO-Socket-INET6>0:net/p5-IO-Socket-INET6
 
 INSTALL_TARGET=	pure_install
 
@@ -35,6 +34,7 @@ SHEBANG_FILES=	example/ssl_mitm.pl
 
 IDN_BUILD_DEPENDS=	p5-URI>=1.50:net/p5-URI
 IDN_RUN_DEPENDS=	${IDN_BUILD_DEPENDS}
+IPV6_RUN_DEPENDS=	p5-IO-Socket-IP>0:net/p5-IO-Socket-IP
 
 post-install-EXAMPLES-on:
 	${MKDIR} ${FAKE_DESTDIR}${EXAMPLESDIR}/
