--- a/devel/Makefile
+++ b/devel/Makefile
@@ -1410,6 +1410,8 @@ SUBDIR += t1lib
 SUBDIR += talloc
 SUBDIR += talloc1
 SUBDIR += tbb
+SUBDIR += tcl-memchan
+SUBDIR += tcl-trf
 SUBDIR += tcllib
 SUBDIR += tevent
 SUBDIR += tex-kpathsea
