--- a/filesystems/dsbmc/Makefile
+++ b/filesystems/dsbmc/Makefile
@@ -1,7 +1,7 @@
 PORTNAME=	dsbmc
 DISTVERSION=	1.2
 PORTREVISION=	1
-CATEGORIES=	sysutils
+CATEGORIES=	filesystems sysutils
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Qt client for DSBMD that lets you mount media, and more
@@ -10,7 +10,7 @@ WWW=		https://github.com/mrclksr/DSBMC
 LICENSE=	bsd2
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
-RUN_DEPENDS=	dsbmd>=0.3:sysutils/dsbmd
+RUN_DEPENDS=	dsbmd>=0.3:filesystems/dsbmd
 
 USES=		compiler:c++11-lang desktop-file-utils gl qmake qt:5 tar:tgz
 
