--- a/sysutils/gigolo/Makefile
+++ b/sysutils/gigolo/Makefile
@@ -1,6 +1,6 @@
 PORTNAME=	gigolo
 PORTVERSION=	0.5.3
-PORTREVISION=	1
+PORTREVISION=	2
 CATEGORIES=	sysutils
 MASTER_SITES=	XFCE/apps
 
@@ -11,8 +11,9 @@ WWW=		https://docs.xfce.org/apps/gigolo/start
 LICENSE=	gpl2
 
 BUILD_DEPENDS=	p5-XML-Parser>=0:textproc/p5-XML-Parser
+LIB_DEPENDS=	libharfbuzz.so:print/harfbuzz
 
-USES=		fuse gettext-tools gmake gnome pkgconfig tar:bzip2 xfce xorg
+USES=		gettext-tools gmake gnome pkgconfig tar:bzip2 xfce xorg
 USE_GNOME=	cairo gdkpixbuf2 gtk30 gvfs intltool
 USE_XORG=	x11
 
