--- a/audio/libvorbis/Makefile
+++ b/audio/libvorbis/Makefile
@@ -1,20 +1,23 @@
 PORTNAME=	libvorbis
-PORTVERSION=	1.3.7
+DISTVERSION=	1.3.7
+PORTREVISION=	1
 PORTEPOCH=	3
 CATEGORIES=	audio
 MASTER_SITES=	https://downloads.xiph.org/releases/vorbis/ \
-		https://download.videolan.org/videolan/testing/contrib/vorbis/
+		https://github.com/xiph/vorbis/releases/download/v${DISTVERSION}/
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Audio compression codec library
+WWW=		https://xiph.org/vorbis/
 
 LICENSE=	bsd3
 LICENSE_FILE=	${WRKSRC}/COPYING
 
 LIB_DEPENDS=	libogg.so:audio/libogg
 
-USES=		libtool pathfix tar:xz
+USES=		cpe libtool pathfix tar:xz
 USE_LDCONFIG=	yes
+CPE_VENDOR=	xiph.org
 
 GNU_CONFIGURE=	yes
 CONFIGURE_ARGS=	--with-ogg=${LOCALBASE}
