--- a/devel/libspice-server/Makefile
+++ b/devel/libspice-server/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=	libspice-server
-DISTVERSION=	0.15.2
+DISTVERSION=	0.15.0
 CATEGORIES=	devel
 MASTER_SITES=	https://www.spice-space.org/download/releases/spice-server/
 DISTNAME=	spice-${PORTVERSION}
@@ -10,37 +10,47 @@ WWW=		https://spice-space.org/
 
 LICENSE=	gpl2
 
-BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}pyparsing>0:devel/py-pyparsing@${PY_FLAVOR} \
-		spice-protocol>=0.12.10:devel/spice-protocol
 LIB_DEPENDS=	libopus.so:audio/opus
-
-USES=		compiler:c++11-lang cpe gmake gnome jpeg \
-		localbase:ldflag meson pkgconfig python ssl tar:bzip2 xorg
-CPE_VENDOR=	spice_project
-CPE_PRODUCT=	spice
-USE_GNOME=	glib20
-USE_LDCONFIG=	yes
-USE_XORG=	pixman
-
-MESON_ARGS+=	-Dsmartcard=disabled
-
-INSTALL_TARGET=	install-strip
-
-BINARY_ALIAS=	python3=${PYTHON_CMD}
+BUILD_DEPENDS=	autoconf-archive>=0:devel/autoconf-archive \
+		spice-protocol>=0.12.10:devel/spice-protocol
 
 OPTIONS_DEFINE=		GSTREAMER LZ4 SASL STATISTICS
 OPTIONS_DEFAULT=	GSTREAMER LZ4 SASL
-
 STATISTICS_DESC=	Statistic code
 
-GSTREAMER_LIB_DEPENDS=		liborc-0.4.so:devel/orc
 GSTREAMER_USES=			gstreamer
-GSTREAMER_MESON_ON=	-Dgstreamer=1.0
-GSTREAMER_MESON_OFF=	-Dgstreamer=no
-LZ4_LIB_DEPENDS=	liblz4.so:archivers/liblz4
-LZ4_MESON_TRUE=	lz4
+GSTREAMER_CONFIGURE_ON=		--enable-gstreamer=1.0
+GSTREAMER_CONFIGURE_OFF=	--enable-gstreamer=no
+GSTREAMER_LIB_DEPENDS=		liborc-0.4.so:devel/orc
+
+LZ4_CONFIGURE_ENABLE=	lz4
+LZ4_LIB_DEPENDS+=	liblz4.so:archivers/liblz4
+
+SASL_CONFIGURE_WITH=	sasl
 SASL_LIB_DEPENDS=	libsasl2.so:security/cyrus-sasl2
-SASL_MESON_TRUE=	sasl
-STATISTICS_MESON_ON=	-Dstatistics=true
+
+STATISTICS_CONFIGURE_ENABLE=	statistics
+
+USES=		autoreconf compiler:c++11-lang cpe gmake gnome jpeg \
+		libtool localbase:ldflag pkgconfig python ssl tar:bzip2 xorg
+
+USE_GNOME=	glib20
+USE_XORG=	pixman
+USE_LDCONFIG=	yes
+
+CPE_VENDOR=	spice_project
+CPE_PRODUCT=	spice
+
+GNU_CONFIGURE=	yes
+CONFIGURE_ARGS+=--disable-celt051 \
+		--enable-manual=no
+
+SPICE_SSL_CFLAGS=	-I${OPENSSLINC}
+SPICE_SSL_LIBS=	-L${OPENSSLLIB} -lcrypto -lssl
+CONFIGURE_ENV+=	SSL_CFLAGS="${SPICE_SSL_CFLAGS}" SSL_LIBS="${SPICE_SSL_LIBS}" \
+		OPENSSL_CFLAGS="${SPICE_SSL_CFLAGS}" OPENSSL_LIBS="${SPICE_SSL_LIBS}" \
+		PYTHON=${PYTHON_CMD}
+
+INSTALL_TARGET=	install-strip
 
 .include <bsd.port.mk>
